[gd_scene load_steps=3 format=3 uid="uid://dr0e1k53hy0m1"]

[ext_resource type="Script" uid="uid://ddrvytb0uddyt" path="res://addons/capa/editor/capability_tree_view.gd" id="1_ecs11"]
[ext_resource type="Script" uid="uid://cus3wwuylga1e" path="res://addons/capa/editor/capa_debugger_editor_panel.gd" id="1_t846x"]

[node name="Capa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t846x")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Filter" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "Filter"
backspace_deletes_composite_character_enabled = true
clear_button_enabled = true

[node name="HScrollBar" type="HScrollBar" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -5.0
page = 105.0
value = -5.0
rounded = true

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Scale:"

[node name="ZoomSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 0.1
max_value = 5.0
step = 0.01
value = 1.0
exp_edit = true
ticks_position = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Frame #:"

[node name="FrameSpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ClearButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="CapabilityTreeView" type="Tree" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true
allow_reselect = true
enable_recursive_folding = false
hide_root = true
select_mode = 1
scroll_horizontal_enabled = false
script = ExtResource("1_ecs11")
active_color = Color(1, 1, 1, 0.78431374)
disactive_color = Color(1, 1, 1, 0)
marker_active_color = Color(7.70092e-07, 0.9909943, 0.8790686, 0.78431374)
track_color = Color(0, 0, 0, 0.39215687)
mark_length = 8
zoom = 0.5

[connection signal="text_changed" from="PanelContainer/VBoxContainer/HBoxContainer/Filter" to="." method="_on_filter_text_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/HScrollBar" to="." method="_on_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/ZoomSlider" to="." method="_on_zoom_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/FrameSpinBox" to="." method="_on_frame_spin_box_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/CapabilityTreeView" to="." method="_on_capability_tree_view_item_selected"]
[connection signal="zoom_changed" from="PanelContainer/VBoxContainer/CapabilityTreeView" to="." method="_on_capability_tree_view_zoom_changed"]
